--- a/src/style/Welcome.module.css
+++ b/src/style/Welcome.module.css
@@ -34,10 +34,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
+   
+} 
 .actionBtn>a:last-child {
     color: var(--btnBgColor);
     font-size: 0.900em;
     font-weight: 600;
     font-style: normal;
+    text-decoration: none;
 }
+
