--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@ a {
 a:hover {
     text-decoration: none !important;
 }
+.app_layout {
+    background-color: #f2f0e4;
+    height: 100vh;
+    position: relative;
+    width: 100%;
+    max-width: 500px;
+    margin: auto;
+}
