--- a/src/style/dailyInfoCard.module.css
+++ b/src/style/dailyInfoCard.module.css
@@ -16,7 +16,7 @@
     text-align: end;
 }
 .dailyCard>div>div {
-    margin-left: 0.5em;
+    margin-left: 2.5em;
     display: flex;
     flex-direction: column;
     width: 80%;
@@ -29,4 +29,11 @@
 .dailyCard p {
     font-size: 0.875em;
     font-weight: 600;
+    line-height: 1;
+    margin: 0;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
 }
