--- a/src/style/home.module.css
+++ b/src/style/home.module.css
@@ -7,3 +7,41 @@
     height: 100%;
     
 }
+.home_container+.action_btn button {
+    background-color: transparent;
+    border: none;
+    margin-left: auto;
+}
+.home_container +  .action_btn button svg{
+    font-size: 30px;
+}
+.home_container + .action_btn {
+    display: flex;
+    align-items: center;
+    padding: 4em 1.5em 2em 1.5em;
+    position: sticky;
+    left: 0;
+    right: 0;
+    top: 0;
+    background-image: linear-gradient(transparent);
+    bottom: 0;
+}
+.home_container+.action_btn > button:first-child {
+    border-radius: 2em;
+    background-color: #28ae61;
+    color: #ffff;
+    padding: 10px 18px;
+    font-size: 1.1em;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.home_container+.action_btn>button:nth-child(2){
+    line-height: 1;
+}
+.home_container+.action_btn > button:nth-child(2) svg {
+    color: var(--textColor);
+}
