new room bottom nagvigators

--- a/src/style/roomDetail.module.css
+++ b/src/style/roomDetail.module.css
@@ -84,3 +84,54 @@
   margin-right: 0.3em;
   line-height: 0.8;
 }
+.foote {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #ffff;
+}
+.foote button {
+  background-color: #e7e4d5;
+  border: none;
+  border-radius: 2em;
+}
+.foote button img {
+  width: 30px;
+}
+.foote > button {
+  display: flex;
+  align-items: center;
+  padding: 0.3em 1em;
+  color: #28ae61;
+  font-weight: 500;
+}
+.foote > div {
+  display: flex;
+  align-content: center;
+}
+.foote > div > button {
+  line-height: 1;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  display: -ms-inline-grid;
+  align-items: center;
+  justify-content: center;
+}
+.foote >div > button:first-child {
+  font-size: 1.5em;
+  margin-right: 0.5em;
+}
+.foote >div > button:nth-child(2) {
+  
+  margin-right: 0.5em;
+}
+.foote >div > button:nth-child(3) {
+  
+  margin-right: 0.5em;
+}
+
